Fix #6040: Misaligned embedded images in blockquotes in forum posts.
Fix thumbnail images embedded with `* !post #123` in forum posts and comments being too wide and
overflowing the containing element. This didn't affect large images embedded with `!post #123`.

Also change it so that images embedded with `!post #123` are only height-constrained, not
width-constrained, so that wide images can take up the full width of the screen.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -183,7 +183,7 @@
     .media-embed-image {
       img, video, canvas {
         border-radius: 0.25rem;
-        max-width: var(--media-embed-size);
+        max-width: 100%;
         max-height: var(--media-embed-size);
         width: auto;
         height: auto;
@@ -270,7 +270,7 @@
 }
 
 .new-comment, .edit_comment, .new_forum_post, article.comment, article.forum-post {
-  article.dtext-media-embed {
+  article.dtext-media-embed:not(media-gallery *) {
     --media-embed-size: 225px;
   }
 }
